--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 pandas==1.3.4
-numpy==1.21.3
+numpy==1.21.4
 scikit-learn==1.0.1
-tensorboard==2.7.0
-sqlalchemy==1.4.26
-psycopg2==2.9.1
-plotly==5.3.1
-catboost==1.0.2
+sqlalchemy==1.4.27
+psycopg2==2.9.2
+plotly==5.4.0
+catboost==1.0.3
 kaleido==0.2.1
-statsmodels==0.13.0
+statsmodels==0.13.1
 matplotlib==3.4.3
 seaborn==0.11.2
-scipy==1.7.1
-hyperopt==0.2.5
-wandb==0.12.6
+scipy==1.7.2
+hyperopt==0.2.7
 argparse==1.4.0
+# pmdarima==1.8.4
